crates/rhai-fmt/tests/snapshots/fmt__format@module.snap
---
source: crates/rhai-fmt/tests/fmt.rs
expression: formatted
---
// This script imports an external script as a module.

import "loop" as x;
print(`Module test! foo = ${x::foo}`);

