crates/rhai-fmt/tests/snapshots/fmt__format@op1.snap
---
source: crates/rhai-fmt/tests/fmt.rs
expression: formatted
---
// This script runs a single expression.

print("The result should be 46:");
print(34 + 12);

