crates/rhai-fmt/tests/snapshots/fmt__format@op3.snap
---
source: crates/rhai-fmt/tests/fmt.rs
expression: formatted
---
// This script runs a complex expression.

print("The result should be 230:");

let x = (12 + 34) * 5;

print(x);

