crates/rhai-fmt/tests/snapshots/fmt__format@optional_ops.snap
---
source: crates/rhai-fmt/tests/fmt.rs
expression: formatted
---
fn test_a() {
  let foo = #{};
  let val = foo?.bar["baz"] ?? 2;
}

