crates/rhai-fmt/tests/snapshots/fmt__format@simple.snap
---
source: crates/rhai-fmt/tests/fmt.rs
expression: formatted
---
#!/bin/echo hello


// It's a
let a = "0";

/// It's b

let b = a;

const c = b; /* */

const ident = 2;

