crates/rhai-fmt/tests/snapshots/fmt__format@string_escape.snap
---
source: crates/rhai-fmt/tests/fmt.rs
expression: formatted
---
let a = """";
let a = " "" ";
let b = ````;
let b = ` `` `;

